--- a/web/index.css
+++ b/web/index.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Open Sans', sans-serif;
+}
+
 #logo, #time {
     height: 52px;
 }
@@ -19,8 +23,17 @@
 	height: 70%;
 	width: 100%;
 }
-#zoom text {
+#zoom .labels {
     pointer-events: none;
+}
+
+#zoom .labels p {
+    display: flex;
+    height: 100%;
+    line-height: 14px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .heatmap-container {
@@ -38,5 +51,4 @@
   vertical-align: middle;
   text-align: center;
   margin: 0 auto;
-
 }
