--- a/web/index.css
+++ b/web/index.css
@@ -59,13 +59,38 @@
     height: 4.5rem;
 }
 
+#upvotes-downvotes line {
+	stroke: gray;
+	stroke-width: 0.5;
+}
+
+.upvotes-bar {
+	fill: #90EE90;
+}
+
+.downvotes-bar {
+	fill: #ef3d47;
+}
+
 #offensive-reports {
     height: 4.5rem;
 }
 
 #sub-communities,
 #related-communities {
+	position: relative;
     height: 10rem;
+}
+
+.donut-chart {
+	position: absolute;
+	left: 0;
+}
+
+.donut-legend {
+	position: absolute;
+	right: 0;
+	padding-top: 5%;
 }
 
 #zoom {
@@ -88,19 +113,6 @@
 
 #zoom text {
     pointer-events: none;
-}
-
-#upvotes-downvotes line {
-	stroke: gray;
-	stroke-width: 0.5;
-}
-
-.upvotes-bar {
-	fill: #90EE90;
-}
-
-.downvotes-bar {
-	fill: #ef3d47;
 }
 
 .tooltip {   
@@ -127,10 +139,6 @@
     border-width: 5px;
     border-style: solid;
     border-color: #555 transparent transparent transparent;
-}
-
-.donut-legend text {
-	font-size: 12px;
 }
 
 .scatter {
