--- a/web/index.css
+++ b/web/index.css
@@ -147,13 +147,43 @@
 }
 
 .scatter {
-  position: absolute;
-  bottom: 5%;
-  height: 150px;
-  width: 80%;
-  left: 50%;
-  z-index: -10;
-  transform: translate(-50%, 0);
+	position: absolute;
+	bottom: 5%;
+	height: 150px;
+	width: 80%;
+	left: 50%;
+	z-index: -10;
+	transform: translate(-50%, 0);
+}
+
+
+.metrics {
+	overflow: hidden;
+	display: inline-block;
+    background-color: #555;
+}
+
+.metrics p {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding-top: 0.5rem;
+	padding-bottom: 0.125rem;
+	font-size: 0.7rem;
+	margin: 0;
+	padding-left: 0.2rem;
+	padding-right: 0V2rem;
+	cursor: default;
+}
+
+.metrics p:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.metrics p.active {
+  background-color: #4CAF50;
+  color: white;
 }
 
 @media screen and (min-width: 1920px)                           {  html { font-size: 16px; }  }
