--- a/web/index.css
+++ b/web/index.css
@@ -138,6 +138,46 @@
     pointer-events: none;
 }
 
+.tooltip {
+    position: relative;
+    color: white;
+    text-align: right;
+    pointer-events: none;
+    transition: 200ms cubic-bezier(0,0,.2,1);
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+.tooltip.is-active table {
+    transform: scale(1);
+}
+.tooltip table {
+    width: 100%;
+    padding: 8px;
+    background: rgba(97,97,97,.9);
+    border: none;
+    border-radius: 2px;
+    transition: 200ms cubic-bezier(0,0,.2,1);
+    transform: scale(0);
+    transform-origin: center;
+}
+.tooltip table thead {
+    font-weight: bold;
+    font-size: 1rem;
+    line-height: 1rem;
+    text-align: center;
+}
+.tooltip table thead td {
+    padding-bottom: 0.5rem;
+}
+.tooltip table tbody {
+    font-size: 0.9rem;
+    line-height: 0.85rem;
+}
+
+/*
 .tooltip {   
 	position: absolute;
 	display: inline-block;
@@ -148,21 +188,22 @@
 	border-radius: 6px;
     padding: 5px 5px;
     z-index: 1;
-	opacity: 0;  /* starts hidden by default */
+	opacity: 0;  /* starts hidden by default
 	pointer-events: none;
 }
 
 .tooltip::after {
-	/* CSS to add a triangle to the tooltips's bottom region*/
+	/* CSS to add a triangle to the tooltips's bottom region
     content: " ";
     position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
+    top: 100%;
     left: 50%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
     border-color: #555 transparent transparent transparent;
 }
+*/
 
 #metrics .mdl-tabs__tab {
 	font-size: 10px;
