--- a/web/css/d3time.css
+++ b/web/css/d3time.css
@@ -1,9 +1,10 @@
 #time {
+    flex-grow: 1;
     padding: 0 12px;
 }
 
 #time .axis line {
-    stroke: #95989A;
+    stroke: #e0e0e0;
 }
 #time .axis text {
     font-size: 1.5rem;
