--- a/web/css/d3votes.css
+++ b/web/css/d3votes.css
@@ -1,3 +1,12 @@
+#votes {
+    position: relative;
+    height: 6rem;
+}
+
+#votes line {
+    stroke: #e0e0e0;
+}
+
 #votes .upvotes {
     fill: #00E676;
 }
